[package]
name = "tardar"
version = "0.1.0"
rust-version = "1.57.0"
edition = "2021"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Extensions for diagnostic error handling with `miette`."
repository = "https://github.com/olson-sean-k/tardar"
readme = "README.md"
license = "MIT"
keywords = ["diagnostics"]

[dependencies]

[dependencies.miette]
version = "^7.2.0"
default-features = false

[dependencies.vec1]
version = "^1.10.0"
default-features = false
