[package]
name = "tardar"
version = "0.2.0"
rust-version = "1.83.0"
edition = "2021"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
description = "Extensions for diagnostic error handling with `miette`."
repository = "https://github.com/olson-sean-k/tardar"
readme = "README.md"
license = "MIT"
keywords = [
    "diagnostics",
    "error",
    "miette",
    "result",
]
categories = ["rust-patterns"]

[dependencies]

[dependencies.miette]
version = "^7.2.0"
default-features = false

[dependencies.mitsein]
version = "^0.6.1"
default-features = false
features = ["std"]
